# psu-python

./: .buildinfo  .gitignore  README.md  dictionaries.html  genindex.html  index.html  lists.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  strings.html
.github/workflows/: build-docs.yml  python-publish.yml
_sources/: dictionaries.rst.txt  lists.rst.txt
docs/: requirements.txt
docs/source/: conf.py  dictionaries.rst  index.rst  strings.rst
examples/: random.py  to_lower.py
src/psu_python/: __init__.py  dictionaries.py  lists.py  strings.py
