[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='psu-python'
version='0.1.0'
description=''
authors=[
    {name='Theodore Tasman', email='psupython@ttasman.com'}
]
license='GPL-3.0'
readme='README.md'
dependencies=[]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Natural Language :: English',
]

