[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='psu-python'
version='0.2.2'
description='A python package for abstracting python class methods behind a fully functional layer intended for educational use in CMPSC 131 at The Pennsylvania State University'
authors=[
    {name='Theodore Tasman', email='psupython@ttasman.com'}
]
license='GPL-3.0'
readme='README.md'
dependencies=[]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Education',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Natural Language :: English',
]

docs = [
    "sphinx>=4.0.0",
    "furo",
    "sphinx-autodoc-typehints",
]

[project.urls]
Homepage = 'https://tedtasman.github.io/psu-python/'

